packages/build/tests/error/fixtures/exception_string/plugin.js
module.exports = {
  onPreBuild() {
    // eslint-disable-next-line no-throw-literal
    throw 'test'
  },
}
